<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ This project and source code may use libraries or frameworks that are
  ~ released under various Open-Source licenses. Use of those libraries and
  ~ frameworks are governed by their own individual licenses.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  ~
  ~ These materials have been reviewed and are updated as of 7/2022.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".view.creature.CreatureActivity">

  <TextView
    android:id="@+id/tapLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tap_to_set_avatar"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/avatarImageView"
    app:layout_constraintEnd_toEndOf="@+id/avatarImageView"
    app:layout_constraintStart_toStartOf="@+id/avatarImageView"
    app:layout_constraintTop_toTopOf="@+id/avatarImageView"
    tools:text="@string/tap_to_set_avatar" />

  <ImageView
    android:id="@+id/avatarImageView"
    android:layout_width="160dp"
    android:layout_height="160dp"
    android:contentDescription="@string/avatar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/nameLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:text="@string/name"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

  <EditText
    android:id="@+id/nameEditText"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:hint="@string/creature_name"
    android:inputType="text"
    app:layout_constraintBaseline_toBaselineOf="@+id/nameLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/nameLabel" />

  <TextView
    android:id="@+id/intelligenceLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:text="@string/intelligence"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

  <Spinner
    android:id="@+id/intelligence"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    app:layout_constraintBaseline_toBaselineOf="@+id/intelligenceLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/intelligenceLabel" />

  <TextView
    android:id="@+id/strengthLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:text="@string/strength"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/intelligenceLabel" />

  <Spinner
    android:id="@+id/strength"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    app:layout_constraintBaseline_toBaselineOf="@+id/strengthLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/intelligenceLabel" />

  <TextView
    android:id="@+id/enduranceLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:text="@string/endurance"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/strengthLabel" />

  <Spinner
    android:id="@+id/endurance"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    app:layout_constraintBaseline_toBaselineOf="@+id/enduranceLabel"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/intelligenceLabel" />

  <TextView
    android:id="@+id/hitPointsLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:text="@string/hit_points"
    android:textSize="28sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/enduranceLabel"
    tools:text="@string/hit_points" />

  <TextView
    android:id="@+id/hitPoints"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="72sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hitPointsLabel"
    tools:text="999" />

  <Button
    android:id="@+id/saveButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_16"
    android:text="@string/save"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/hitPoints" />

</androidx.constraintlayout.widget.ConstraintLayout>